--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -24,7 +24,14 @@
 
 .courses__content .img img {
     width: 100%;
+    max-width: 700px;
+    height: 100%;
     border-radius: 8px;
+}
+
+.text {
+    width: 100%;
+    max-width: 500px;
 }
 
 .text h2{
@@ -38,6 +45,7 @@
     }
 
     .text {
-        padding-bottom: 1rem;
+        padding: 1rem 2%;
+        text-align: justify;
     }
 }
