--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -32,7 +32,8 @@
 }
 
 .right img{
-    width: 400px !important;
+    width: 100%;
+    max-width: 400px !important;
     border-radius: 8px;
     box-shadow: rgba(20, 98, 255, 0.4) 5px 5px, rgba(30, 48, 240, 0.3) 10px 10px, rgba(30, 48, 240, 0.2) 15px 15px, rgba(30, 48, 240, 0.1) 20px 20px;
 }
