--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -14,7 +14,9 @@
 }
 
 .card {
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
+    height: 440px;
     padding: 1rem;
     background-color: #fff;
     border-radius: 8px;
@@ -41,8 +43,10 @@ article p {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical; 
+    width: 100%;
+    height: 23%;
 }
 
 article .btn {
@@ -77,4 +81,10 @@ article .btn {
 .container {
     flex-direction: column;
 }
+}
+
+@media screen and (max-width: 355) {
+    .card {
+        max-width: 300px;
+    }
 }
