--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -38,3 +38,14 @@ span {
     bottom: 25px;
     right: 25px;
 }
+
+@media screen and (max-width: 450px) {
+    .banner{
+        background-image: url('../assets/banner1.png');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        width: 100%;
+        height: 350px;
+        margin: 0 auto;
+    }
+}
