--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -47,11 +47,13 @@ fieldset{
 
 legend{
     border: 1px solid dodgerblue;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     background-color: dodgerblue;
     border-radius: 8px;
     color: #fff;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
 }
 
 .inputBox{
