--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -20,16 +20,20 @@ ul {
 }
 
 a{
-    font-size: 1.30rem;
+    font-size: 1.20rem;
     text-decoration: none;
-    color: #000;
+    color: rgb(71, 71, 71);
     font-weight: bold;
 }
 
+a:hover {
+    color: #202377;
+}
+
 .idem {
-    font-size: 1.30rem;
+    font-size: 1.20rem;
     text-decoration: none;
-    color: #000;
+    color: rgb(71, 71, 71);
     font-weight: bold;
 }
 
